# MyScaleDB

./: CMakeLists.txt  MYSCALE_CHANGELOG.md  README.md
src/AIDB/: CMakeLists.txt
src/AIDB/Analyzer/: SpecialSearchFunction.h  SpecialSearchFunctionsUtils.cpp  SpecialSearchFunctionsUtils.h
src/AIDB/Cache/: CachedSegment.h  CachedSegmentKey.h  PKCacheManager.cpp  VICacheManager.cpp  VICacheManager.h
src/AIDB/Common/: BM25InfoInDataParts.cpp  BM25InfoInDataParts.h  BruteForceSearch.h  ScanThreadLimiter.h  Segment.cpp  Segment.h  SegmentInfo.h  SegmentStatus.h  SegmentsMgr.cpp  SegmentsMgr.h  StorageVectorIndicesMgr.cpp  StorageVectorIndicesMgr.h  TempVIHolder.h  VIBuildMemoryUsageHelper.cpp  VIBuildMemoryUsageHelper.h  VICommands.cpp  VICommon.h  VIException.h  VIPartReader.cpp  VIPartReader.h  VectorDataset.h  VectorIndexIO.h  VectorIndexObject.cpp  VectorIndexObject.h  VectorIndicesMgr.cpp  VectorIndicesMgr.h
src/AIDB/Factory/: IndexStoreFactory.h  IndexStoreFactoryImpl.h  SparseIndexFactory.h  TantivyIndexFactory.h
src/AIDB/Interpreters/: GetHybridSearchVisitor.h  TantivyFilter.cpp  TantivyFilter.h  VIEventLog.cpp  parseVSParameters.cpp
src/AIDB/Parsers/: ASTVIDeclaration.cpp
src/AIDB/Processors/: FusionSortingStep.cpp  FusionSortingStep.h  HybridSearchFusionTransform.cpp  HybridSearchFusionTransform.h  ReadWithHybridSearch.cpp  ReadWithHybridSearch.h
src/AIDB/Storages/: HybridSearchResult.h  MergeTreeBaseSearchManager.cpp  MergeTreeBaseSearchManager.h  MergeTreeHybridSearchManager.cpp  MergeTreeHybridSearchManager.h  MergeTreeIndexSparse.cpp  MergeTreeIndexSparse.h  MergeTreeIndexTantivy.cpp  MergeTreeIndexTantivy.h  MergeTreeSelectWithHybridSearchProcessor.cpp  MergeTreeSelectWithHybridSearchProcessor.h  MergeTreeSparseSearchManager.cpp  MergeTreeSparseSearchManager.h  MergeTreeTextSearchManager.cpp  MergeTreeTextSearchManager.h  MergeTreeThreadSelectWithFilterAlgorithm.h  MergeTreeVSManager.cpp  MergeTreeVSManager.h  MergeTreeWithVectorScanSource.cpp  MergeTreeWithVectorScanSource.h  ReplicatedMergeTreeBuildVIStrategyPicker.cpp  ReplicatedVITask.cpp  ReplicatedVITask.h  StorageFtsIndex.cpp  StorageFullTextSearch.cpp  StorageSystemVIs.cpp  StorageSystemVIsWithPart.cpp  VIDescriptions.cpp  VIDescriptions.h  VIEntry.h  VITask.cpp  VITask.h  VITaskBase.cpp  VITaskBase.h  VSDescription.h
src/AIDB/Store/: IndexStore.cpp  IndexStore.h  SparseIndexStore.cpp  SparseIndexStore.h  TantivyIndexStore.cpp  TantivyIndexStore.h
(+263 files in other folders)
